Some more alignment fixes

--- a/app/assets/stylesheets/components.css.less
+++ b/app/assets/stylesheets/components.css.less
@@ -1,19 +1,23 @@
-.btn-icon {
-    color: @black-secondary;
-    box-shadow: none;
-    padding: 0;
-}
-.btn-icon:hover {
-    color: @black-text;
-    box-shadow: none;
-}
-
 .btn {
     padding: 2px 8px;
 }
 
+.btn-lg {
+    padding: 10px 16px;
+}
+
 .btn-sm {
     padding: 1px 4px;
+}
+
+.btn-icon {
+  color: @black-secondary;
+  box-shadow: none;
+  padding: 0;
+}
+.btn-icon:hover {
+  color: @black-text;
+  box-shadow: none;
 }
 
 .btn .material-icons {
@@ -367,6 +371,10 @@ a.card-title-link:hover {
 }
 a.btn-fab .material-icons {
     margin-top: 6px;
+}
+.btn-fab .material-icons.material-icons-replay {
+  margin-left: 0;
+  margin-top: 7px;
 }
 .btn-fab-extended {
     display: flex;
